# dr_sasa_python

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_simple.txt  CmakeLists.txt  INSTALL.md  LICENSE  MANIFEST.in  README.md  __init__.py  benchmark_results.json  empty_test  environment.yml  generic_with_matrix.tsv  generic_with_matrix.tsv.A_vs_B.by_atom.tsv  generic_with_matrix.tsv.A_vs_B.by_res.tsv  generic_with_matrix.tsv.B_vs_A.by_res.tsv  generic_with_matrix.tsv.matrix.AB.by_res.tsv  install.sh  install2.sh  install_colab.sh  my_analysis  out.txt  out2.txt  out3.txt  out4.txt  pyproject.toml  requirements.txt  setup.py  structure_parser.py  test.ipynb  test.out  test.py  test_.ipynb  utils.py
backup/original/: CmakeLists_.txt  gpu_config.hpp
bindings/python/: CMakeLists.txt  CmakeLists.txt  bindings.cpp  bindings.cpp.backup  bindings_b.cpp  bindings_old.cpp
bindings/python/src/: atom_bindings.cpp  atom_bindings.hpp  common.hpp  constants.hpp  decoupled_sasa.cpp  decoupled_sasa.hpp  generic_sasa.cpp  generic_sasa.hpp  sasa_calculators.cpp  sasa_calculators.hpp  simple_sasa.cpp  simple_sasa.hpp  utils.cpp  utils.cpp.backup  utils.hpp
bindings/python/utils/: decoupled_sasa.cpp  generic_sasa.cpp  structure_parser.py  utils.py
data/: README.md  benchmark.py  benchmark2.py  fix_pdb.py
data/benchmark_results/: benchmark_results_simple.json  benchmark_summary_simple.csv  bsa_comparison.csv  comparison_summary.csv
dr_sasa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dr_sasa_python/: __init__.py  version.py
dr_sasa_python/bindings/python/: __init__.py
dr_sasa_python/bindings/python/src/: exceptions.hpp  sasa_calculators.cpp  sasa_calculators.hpp  utils.hpp
dr_sasa_python/utils/: structure_parser.py
examples/: atom_structure.py  basic_usage.py  decoupled  decoupled.table  generic.atmasa  generic.by_atom.tsv.A_vs_B.by_atom.tsv  generic.by_atom.tsv.B_vs_A.by_atom.tsv  generic.datmasa  generic.matrix.matrix.AB.by_atom.tsv  generic.matrix.matrix.AB.by_res.tsv  generic.overlaps  run_dr_sasa_n.sh  test_nb.ipynb
examples/test_results/: 3i40.AB_vs_CD.matrix.AB.by_atom.tsv  3i40.A_vs_B.by_atom.tsv  3i40.internal.A.by_atom.matrix.A.by_atom.tsv  3i40.internal.A.by_res.matrix.A.by_atom.tsv  3i40.internal.A.by_res.matrix.A.by_res.tsv  3i40.internal.ABCD.by_atom.matrix.AB.by_atom.tsv  3i40.internal.ABCD.by_atom.matrix.AB.by_res.tsv  3i40.internal.ABCD.by_res.matrix.AB.by_atom.tsv  3i40.internal.ABCD.by_res.matrix.AB.by_res.tsv  3i40.overlaps  pred.AB.datmasa  pred.AB.matrix.B.by_atom.tsv  pred.AB.overlaps  pred.AB_vs_CD.datmasa  pred.AB_vs_CD.matrix.BC.by_res.tsv  pred.AB_vs_CD.overlaps  pred.CD_vs_AB.by_atom.tsv  pred.CD_vs_AB.by_res.tsv  pred.C_vs_B.by_atom.tsv  pred.atmasa  pred.datmasa
examples/test_results/20241030_123719/: mode1.out  mode100.out  mode106.out  mode2.out  mode4.out  test_log.txt
examples/test_results/20241030_124221/: mode1.out  mode4.out
tests/: conftest.py  minimal_test.py  pytest.ini  test_advanced.py  test_atom_structure.py  test_basic.py  test_classes.py  test_core.py  test_dr_sasa.py  test_import.py  test_main.py  test_print.py  test_profiling.py  test_validate.py
tests/test_results/: 3i40.AB.matrix.AB.by_atom.tsv  3i40.AB.matrix.AB.by_res.tsv  3i40.AB_vs_CD.datmasa  3i40.AB_vs_CD.overlaps  3i40.A_vs_B.by_res.tsv  3i40.B_vs_A.by_atom.tsv  3i40.B_vs_A.by_res.tsv  3i40.atmasa  3i40.datmasa  3i40.internal.A.by_atom.matrix.A.by_res.tsv  3i40.matrix.AB.by_res.tsv  pred.AB.matrix.B.by_res.tsv  pred.AB_vs_CD.by_atom.tsv  pred.AB_vs_CD.by_res.tsv  pred.B_vs_C.by_atom.tsv  pred.B_vs_C.by_res.tsv  pred.C_vs_B.by_res.tsv  pred.internal.ABCD.by_atom.matrix.BC.by_res.tsv  pred.internal.ABCD.by_res.matrix.BC.by_res.tsv  pred.matrix.BC.by_res.tsv  pred.overlaps
tests/test_results/20241030_123719/: mode0.out  summary.txt
tests/test_results/20241030_124221/: mode100.out  mode106.out  mode2.out  summary.txt  test_log.txt
