[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.16",
    "scikit-build>=0.13",
    "pybind11[global]>=2.6.0",  # Note [global]
]
build-backend = "setuptools.build_meta"

[project]
name = "dr_sasa_python"
version = "0.1.0"
description = "Python bindings for DR-SASA molecular surface area calculations"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Alessio"}
]
dependencies = [
    "numpy",
    "pandas",
    "biopython",
    "tqdm",
    "freesasa",
    "pytest",
    "pytest-cov",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_dr_sasa.py"]

[tool.setuptools]
package-dir = {"dr_sasa_python" = "dr_sasa_python"}
packages = [
    "dr_sasa_python",
    "dr_sasa_python.utils",
    "dr_sasa_python.bindings",
    "dr_sasa_python.bindings.python"
]

[tool.setuptools.package-data]
dr_sasa_python = ["*.so", "*.pyd"]